fix some json, add more i18n

--- a/public/locales/en/faq.json
+++ b/public/locales/en/faq.json
@@ -38,7 +38,7 @@
       "part1": "",
       "part2": ""
     },
-    "ask7": ""
+    "ask7": "",
     "ans7": {
       "part1": "",
       "part2": ""
