--- a/public/locales/en/startpage.json
+++ b/public/locales/en/startpage.json
@@ -1,40 +1,41 @@
 {
-  "intro": {
-    "title": "Helping with 3D-printing",
-    "content": "translation needed"
-  },
-  "idea": {
-    "title": "The idea",
-    "content1": "Mit unserer Plattform zum",
-    "highlight": "Crowdproducing",
-    "content2": "translation needed"
-  },
-  "motivation": {
-    "title": "Our motivation",
-    "content1": "translation needed",
-    "content2": "translation needed",
-    "content3": "translation needed"
-  },
-  "weneedyou": {
-    "title": "We need You",
-    "content": "translation needed"
-  },
-  "help": {
-    "title": "How You can help",
-    "hospital": {
-      "title": "Hospital and social institution",
-      "content": "translation needed"
-    },
-    "doctor": {
-      "title": "Doctor or nurse",
-      "content": "translation needed"
-    "printer": {
-      "title": "3D-printer / Maker",
-      "content": "translation needed"
-    },
-    "designer": {
-      "title": "Designer",
-      "content": "translation needed"
-    }
-  }
+	"intro": {
+		"title": "Helping with 3D-printing",
+		"content": "translation needed"
+	},
+	"idea": {
+		"title": "The idea",
+		"content1": "Our platform for",
+		"highlight": "Crowdproducing",
+		"content2": "translation needed"
+	},
+	"motivation": {
+		"title": "Our motivation",
+		"content1": "translation needed",
+		"content2": "",
+		"content3": ""
+	},
+	"weneedyou": {
+		"title": "We need You",
+		"content": "translation needed"
+	},
+	"help": {
+		"title": "How You can help",
+		"hospital": {
+			"title": "Hospital and social institution",
+			"content": "translation needed"
+		},
+		"doctor": {
+			"title": "Doctor or nurse",
+			"content": "translation needed"
+		},
+		"printer": {
+			"title": "3D-printer / Maker",
+			"content": "translation needed"
+		},
+		"designer": {
+			"title": "Designer",
+			"content": "translation needed"
+		}
+	}
 }
