change some text

--- a/public/locales/de/order.json
+++ b/public/locales/de/order.json
@@ -5,7 +5,7 @@
   },
   "info": {
     "part1": "Um als Gesundheits/Sozial-Einrichtung Bedarf an Ersatzteilen eintragen zu können, meldet euch unter",
-    "part2": "und wir erstellen euch einen Account.",
+    "part2": "und wir erstellen euch einen Zugang. Daraufhin könnt ihr euer Passwort setzen und Bestellungen anzeigen.",
     "part3": "Wenn ihr schon einen Account habt, meldet euch unter dem oben stehenden Anmelden-Link an um Bedarf einzutragen.",
     "button": "OK"
   },
