--- a/public/locales/de/dashboard.json
+++ b/public/locales/de/dashboard.json
@@ -5,5 +5,6 @@
   "need": "Bedarf",
   "confirmation": "Herstellerbestätigung",
   "printed": "Bereits gedruckt",
+  "contact": "Kontakt",
   "title": "Dashboard"
 }
