--- a/public/locales/en/dashboard.json
+++ b/public/locales/en/dashboard.json
@@ -5,5 +5,6 @@
   "need": "Need",
   "confirmation": "Maker confirmation",
   "printed": "already printed",
+  "contact": "Contact",
   "title": "Dashboard"
 }
