--- a/public/locales/de/user-nav.json
+++ b/public/locales/de/user-nav.json
@@ -2,5 +2,6 @@
   "dashboard": "Dashboard",
   "logout": "Abmelden",
   "login": "Anmelden",
-  "register": "Registrieren"
+  "register": "Registrieren",
+  "logoutok": "Erfolgreich abgemeldet."
 }
