--- a/public/locales/en/user-nav.json
+++ b/public/locales/en/user-nav.json
@@ -2,5 +2,6 @@
   "dashboard": "Dashboard",
   "logout": "Logout",
   "login": "Login",
-  "register": "Sign up"
+  "register": "Sign up",
+  "logoutok": "Logout successfull."
 }
