--- a/public/locales/de/registrationindex.json
+++ b/public/locales/de/registrationindex.json
@@ -1,4 +1,5 @@
 {
+  "pagetitle": "Registrieren",
   "title": "Bei print4health registrieren",
   "text": {
     "part1": "Hier könnt ihr euch auf unserer Plattform registrieren und danach entweder",
