--- a/public/locales/de/startpage.json
+++ b/public/locales/de/startpage.json
@@ -1,4 +1,5 @@
 {
+  "pagetitle": "Helfen mit 3D-Druck",
   "intro": {
     "title": "Helfen mit 3D-Druck",
     "content": "Der Schutz vor neuen Infektionen mit dem Coronavirus Sars-CoV-2 veranlasst die Regierungen in aller Welt zu drastischen Maßnahmen. Politische Entscheidungen beeinflussen viele Bürger/innen und der Eigen- und Fremdschutz hat höchste Priorität. Die zum Schutz vor Infektionen notwendigen Hilfsmittel sind allerdings in allen Ländern Mangelware. Mit 3D gedruckten Produkten könnten viele kleine Beiträge zum Schutz vor Infektionen der Bevölkerung geleistet werden."
