--- a/public/locales/de/requesterregistration.json
+++ b/public/locales/de/requesterregistration.json
@@ -3,7 +3,7 @@
   "subtitle": "Krankenhäuser, Ärzte, gesundheitliche oder soziale Einrichtunge sowie Maker-Hubs",
   "error": "Fehler",
   "info": {
-    "part1": "Hier könnt ihr euch als bei",
+    "part1": "Hier könnt ihr euch als Einrichtung bei",
     "part2": "registrieren und Bedarf an 3D gedruckten Gegenständen anmelden. Bitte füllt das Formular gewissenhaft aus, denn schließlich geht es darum, Menschen zu helfen.",
     "part3": "Solltet ihr ein Maker mit direktem Zugang zu einem 3D-Drucker sein, dann könnt ihr euch",
     "link": "hier registrieren"
