added `<Trans>` for order and commit modals

--- a/public/locales/de/modal-commit.json
+++ b/public/locales/de/modal-commit.json
@@ -1,23 +1,21 @@
 {
+  "title": "Herstellung für {{name}} zusagen",
   "form": {
     "title": "Toll dass Du mithilfst!",
-    "text1": "Bitte trage nur eine Anzahl ein, die Du wirklich bereit und in der Lage bist herzustellen.",
-    "text2": "Du kannst zu einem späteren Zeitpunkt immer noch mehr Teile zusagen.",
-    "label": "Anzahl der Teile",
-    "placeholder": "Anzahl",
-    "button": "Herstellung zusagen"
+    "description": "Bitte trage nur eine Anzahl ein, die Du wirklich bereit und in der Lage bist herzustellen. Du kannst zu einem späteren Zeitpunkt immer noch mehr Teile zusagen.",
+    "amount": {
+      "label": "Anzahl der Teile",
+      "placeholder": "Anzahl"
+    },
+    "submit": "Herstellung zusagen"
   },
   "info": {
     "text1": "Um als Maker Herstellung von Ersatzteilen zusagen zu können, könnt ihr euch",
     "text2": "Wenn ihr schon einen Account habt, meldet euch unter dem oben stehenden Anmelden-Link an, um Herstellung von Ersatzteilen zusagen zu können.",
-    "link": "hier registrieren"
+    "link_registration": "hier registrieren"
   },
-  "button" : {
-    "close" : "Schließen",
-    "register" : "Registrieren"
-  },
-  "title": {
-    "part1": "Herstellung für",
-    "part2": "zusagen"
+  "button": {
+    "close": "Schließen",
+    "register": "Registrieren"
   }
 }
