--- a/public/locales/en/page-thing-detail.json
+++ b/public/locales/en/page-thing-detail.json
@@ -10,5 +10,14 @@
   "downloads": "Downloads",
   "nospecs": "No specs yet.",
   "ordermade": "Thank you, your need was published.",
-  "commitmentmade": "Thank you for your commitment."
+  "commitmentmade": "Thank you for your commitment.",
+  "marker": {
+    "map": {
+      "needed": "Amount needed",
+      "confirmed1": "promised Prints",
+      "need": "Need",
+      "confirmed2": "Promised",
+      "make": "promise to make"
+    }
+  }
 }
