--- a/public/locales/de/page-imprint.json
+++ b/public/locales/de/page-imprint.json
@@ -1,4 +1,26 @@
 {
   "pagetitle": "Impressum",
-  "title": "Impressum"
+  "title": "Impressum",
+  "disclaimer": "print4health.org ist ein gemeinschaftliches Projekt, dass im Rahmen des [**Hackathons WirVsVirus**](https://www.bundesregierung.de/breg-de/themen/coronavirus/wir-vs-virus-1731968) entstanden ist. Es dient derzeit als Prototyp der eingereichten [**06_Medizingeräteherstellung_print4health**](https://devpost.com/software/print4health) und ist als Non-Profit OpenSource Projekt angelegt.",
+  "headline1": "Angaben gemäß § 5 TMG",
+  "contact": {
+    "headline": "Kontakt",
+    "email": "E-Mail [contact@print4health.org](mailto:contact@print4health.org)",
+    "phone": "Telefon: 02137 / 9275848"
+  },
+  "accountability_content": {
+    "headline": "Haftung für Inhalte",
+    "text1": "Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.",
+    "text2": "Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen."
+  },
+  "accountability_links": {
+    "headline": "Haftung für Links",
+    "text1": "Unser Angebot enthält Links zu externen WebsitesDritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auchkeine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oderBetreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung aufmögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nichterkennbar.",
+    "text2": "Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen."
+  },
+  "copyright": {
+    "headline": "Urheberrecht",
+    "text1": "Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.",
+    "text2": "Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen."
+  }
 }
