--- a/public/locales/en/page-thing-detail.json
+++ b/public/locales/en/page-thing-detail.json
@@ -4,8 +4,8 @@
   "specs": "Specs",
   "need": "Total need",
   "order": "Publish need",
-  "hospinfo": "translation needed",
-  "makerinfo": "translation needed",
+  "hospinfo": "To announce some need, you need to register/login with your requester-account",
+  "makerinfo": "To promise a print to an order, you need to register/login with your maker account",
   "prints": "Total prints",
   "downloads": "Downloads",
   "nospecs": "No specs yet.",
