--- a/public/locales/de/modal-login.json
+++ b/public/locales/de/modal-login.json
@@ -1,13 +1,7 @@
 {
   "title": "Anmeldung bei print4health",
-  "info1": {
-    "part1": "als Gesundheits/Sozial-Einrichtung",
-    "part2": "oder als Maker/Drucker/Printer",
-    "part3": "Schreibt eine E-Mail an",
-    "part4": "und wir richten euch einen Benutzer-Account ein.",
-    "part5": "Anschließend könnt ihr Bedarf an Ersatzteilen eintragen oder darauf reagieren und diese herstellen."
-  },
-  "info2": "Ein Registrierungsformular und Accounts für Maker/Drucker/Printer werden gerade vorbereitet. Gesundheits und Sozial-Einrichtungen können sofort starten.",
+  "headline" : "als Gesundheits/Sozial-Einrichtung\noder als Maker/Drucker/Printer",
+  "registration": "Noch keinen Login?\n\nBenutzt das [Registrierungsformular]({{link}}).",
   "email": "E-Mail-Adresse",
   "pass": "Passwort",
   "forgot": "Passwort vergessen?",
