--- a/public/locales/en/modal-login.json
+++ b/public/locales/en/modal-login.json
@@ -1,13 +1,7 @@
 {
   "title": "Login at print4health",
-  "info1": {
-    "part1": "as Health/Social-Institution",
-    "part2": "or as Maker/Printer",
-    "part3": "Send an E-Mail to",
-    "part4": "and we create an User-Account for You.",
-    "part5": "translation needed"
-  },
-  "info2": "translation needed",
+  "headline": "as Health/Social-Institution\nor as Maker/Printer",
+  "registration": "No login yet?\n\nUse the [registration form]({{link}}).",
   "email": "E-Mail-Address",
   "pass": "Password",
   "forgot": "Forgot password?",
