--- a/public/locales/de/modal-order.json
+++ b/public/locales/de/modal-order.json
@@ -1,7 +1,7 @@
 {
   "title": "Bedarf für {{name}} anmelden",
   "info": {
-    "alert" : "Um als Gesundheits/Sozial-Einrichtung Bedarf an Ersatzteilen eintragen zu können, müsst ihr euch <1>hier registrieren</1>.<2/><3/>Euer Account wird manuell freigeschaltet und dann könnt ihr euren Bedarf anmelden.<5/><6/>Bei Fragen, wendet euch an <8>contact@print4health.org</8> oder verwendet das <10>Kontaktformular<10>",
+    "alert" : "Um als Gesundheits/Sozial-Einrichtung Bedarf an Ersatzteilen eintragen zu können, müsst ihr euch [hier registrieren]({{link_registration}}).\n\nEuer Account wird manuell freigeschaltet und dann könnt ihr euren Bedarf anmelden.\n\nBei Fragen, wendet euch an [contact@print4health.org](mailto:contact@print4health.org) oder verwendet das [Kontaktformular]({{link_contact_form}})",
     "account_exists" : "Wenn ihr schon einen Account habt, meldet euch unter dem oben stehenden Anmelden-Link an um Bedarf einzutragen."
   },
   "form": {
